gen/main/java/_0_ParserGrammatik/GrammatikParser.java
// Generated from D:/Universität/Bachelor Cyklus/7 Semester/Bacherlor Arbeit/Compiler/src/main/java/_0_ParserGrammatik\Grammatik.g4 by ANTLR 4.7.2
package main.java._0_ParserGrammatik;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammatikParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LoopStart=1, WhileStart=2, If=3, Then=4, DO=5, Ende=6, GotoStart=7, GotoEnd=8, 
		MacroSart=9, MacroEND=10, MarkeName=11, MacroName=12, Variable=13, Zero=14, 
		Value=15, Text=16, Gleich=17, DoopeltPunkt=18, Gleichung=19, CommaPunkt=20, 
		Plus=21, Minus=22, Mal=23, Div=24, NichtGleich=25, KlammerAuf=26, KlammerZu=27, 
		Komma=28, NichtWichtigCharakter1=29, NichtWichtigCharakter2=30, WhiteSpace=31;
	public static final int
		RULE_program = 0, RULE_loops = 1, RULE_loopProgram = 2, RULE_ifLoop = 3, 
		RULE_counter = 4, RULE_nichts = 5, RULE_whiles = 6, RULE_whileProgram = 7, 
		RULE_ifWhile = 8, RULE_condition = 9, RULE_gotos = 10, RULE_gotoEnde = 11, 
		RULE_gotoProgram = 12, RULE_gotoCode = 13, RULE_gotoInstructions = 14, 
		RULE_gotoAssign = 15, RULE_ifGoto = 16, RULE_marken = 17, RULE_assign = 18, 
		RULE_exp = 19, RULE_expIf = 20, RULE_macroLoops = 21, RULE_macroLoop = 22, 
		RULE_macroWhiles = 23, RULE_macroWhile = 24, RULE_macroGotos = 25, RULE_macroGoto = 26, 
		RULE_parameters = 27, RULE_text = 28, RULE_macroNameAnruf = 29;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "loops", "loopProgram", "ifLoop", "counter", "nichts", "whiles", 
			"whileProgram", "ifWhile", "condition", "gotos", "gotoEnde", "gotoProgram", 
			"gotoCode", "gotoInstructions", "gotoAssign", "ifGoto", "marken", "assign", 
			"exp", "expIf", "macroLoops", "macroLoop", "macroWhiles", "macroWhile", 
			"macroGotos", "macroGoto", "parameters", "text", "macroNameAnruf"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'LOOP'", "'WHILE'", "'IF'", "'THEN'", "'DO'", "'END'", "'GOTO'", 
			"'HALT'", "'MACRO'", "'MACROEND'", null, null, null, "'0'", null, null, 
			"':='", "':'", "'='", "';'", "'+'", "'-'", "'*'", "'/'", "'!='", "'('", 
			"')'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LoopStart", "WhileStart", "If", "Then", "DO", "Ende", "GotoStart", 
			"GotoEnd", "MacroSart", "MacroEND", "MarkeName", "MacroName", "Variable", 
			"Zero", "Value", "Text", "Gleich", "DoopeltPunkt", "Gleichung", "CommaPunkt", 
			"Plus", "Minus", "Mal", "Div", "NichtGleich", "KlammerAuf", "KlammerZu", 
			"Komma", "NichtWichtigCharakter1", "NichtWichtigCharakter2", "WhiteSpace"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammatik.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammatikParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public LoopsContext loops() {
			return getRuleContext(LoopsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GrammatikParser.EOF, 0); }
		public MacroLoopsContext macroLoops() {
			return getRuleContext(MacroLoopsContext.class,0);
		}
		public WhilesContext whiles() {
			return getRuleContext(WhilesContext.class,0);
		}
		public MacroWhilesContext macroWhiles() {
			return getRuleContext(MacroWhilesContext.class,0);
		}
		public GotosContext gotos() {
			return getRuleContext(GotosContext.class,0);
		}
		public GotoEndeContext gotoEnde() {
			return getRuleContext(GotoEndeContext.class,0);
		}
		public MacroGotosContext macroGotos() {
			return getRuleContext(MacroGotosContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammatikListener ) ((GrammatikListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammatikListener ) ((GrammatikListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammatikVisitor ) return ((GrammatikVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			setState(81);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==MacroSart) {
					{
					setState(60);
					macroLoops(0);
					}
				}

				setState(63);
				loops(0);
				setState(64);
				match(EOF);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==MacroSart) {
					{
					setState(66);
					macroWhiles(0);
					}
				}

				setState(69);
				whiles(0);
				setState(70);
				match(EOF);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==MacroSart) {
					{
					setState(72);
					macroGotos(0);
					}
				}

				setState(77);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(75);
					gotos();
					}
					break;
				case 2:
					{
					setState(76);
					gotoEnde();
					}
					break;
				}
				setState(79);
				match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoopsContext extends ParserRuleContext {
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public MacroNameAnrufContext macroNameAnruf() {
			return getRuleContext(MacroNameAnrufContext.class,0);
		}
		public IfLoopContext ifLoop() {
			return getRuleContext(IfLoopContext.class,0);
		}
		public LoopProgramContext loopProgram() {
			return getRuleContext(LoopProgramContext.class,0);
		}
		public List<LoopsContext> loops() {
			return getRuleContexts(LoopsContext.class);
		}
		public LoopsContext loops(int i) {
			return getRuleContext(LoopsContext.class,i);
		}
		public TerminalNode CommaPunkt() { return getToken(GrammatikParser.CommaPunkt, 0); }
		public LoopsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loops; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammatikListener ) ((GrammatikListener)listener).enterLoops(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammatikListener ) ((GrammatikListener)listener).exitLoops(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammatikVisitor ) return ((GrammatikVisitor<? extends T>)visitor).visitLoops(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LoopsContext loops() throws RecognitionException {
		return loops(0);
	}

	private LoopsContext loops(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		LoopsContext _localctx = new LoopsContext(_ctx, _parentState);
		LoopsContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_loops, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Variable:
				{
				setState(84);
				assign();
				}
				break;
			case MacroName:
				{
				setState(85);
				macroNameAnruf();
				}
				break;
			case If:
				{
				setState(86);
				ifLoop();
				}
				break;
			case LoopStart:
				{
				setState(87);
				loopProgram();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(95);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new LoopsContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_loops);
					setState(90);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(91);
					match(CommaPunkt);
					setState(92);
					loops(3);
					}
					} 
				}
				setState(97);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class LoopProgramContext extends ParserRuleContext {
		public TerminalNode LoopStart() { return getToken(GrammatikParser.LoopStart, 0); }
		public CounterContext counter() {
			return getRuleContext(CounterContext.class,0);
		}
		public TerminalNode DO() { return getToken(GrammatikParser.DO, 0); }
		public TerminalNode Ende() { return getToken(GrammatikParser.Ende, 0); }
		public LoopsContext loops() {
			return getRuleContext(LoopsContext.class,0);
		}
		public NichtsContext nichts() {
			return getRuleContext(NichtsContext.class,0);
		}
		public LoopProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loopProgram; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammatikListener ) ((GrammatikListener)listener).enterLoopProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammatikListener ) ((GrammatikListener)listener).exitLoopProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammatikVisitor ) return ((GrammatikVisitor<? extends T>)visitor).visitLoopProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LoopProgramContext loopProgram() throws RecognitionException {
		LoopProgramContext _localctx = new LoopProgramContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_loopProgram);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(LoopStart);
			setState(99);
			counter();
			setState(100);
			match(DO);
			setState(103);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LoopStart:
			case If:
			case MacroName:
			case Variable:
				{
				setState(101);
				loops(0);
				}
				break;
			case Ende:
				{
				setState(102);
				nichts();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(105);
			match(Ende);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfLoopContext extends ParserRuleContext {
		public TerminalNode If() { return getToken(GrammatikParser.If, 0); }
		public ExpIfContext expIf() {
			return getRuleContext(ExpIfContext.class,0);
		}
		public TerminalNode Then() { return getToken(GrammatikParser.Then, 0); }
		public TerminalNode Ende() { return getToken(GrammatikParser.Ende, 0); }
		public LoopsContext loops() {
			return getRuleContext(LoopsContext.class,0);
		}
		public NichtsContext nichts() {
			return getRuleContext(NichtsContext.class,0);
		}
		public IfLoopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifLoop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammatikListener ) ((GrammatikListener)listener).enterIfLoop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammatikListener ) ((GrammatikListener)listener).exitIfLoop(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammatikVisitor ) return ((GrammatikVisitor<? extends T>)visitor).visitIfLoop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfLoopContext ifLoop() throws RecognitionException {
		IfLoopContext _localctx = new IfLoopContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ifLoop);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(If);
			setState(108);
			expIf();
			setState(109);
			match(Then);
			setState(112);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LoopStart:
			case If:
			case MacroName:
			case Variable:
				{
				setState(110);
				loops(0);
				}
				break;
			case Ende:
				{
				setState(111);
				nichts();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(114);
			match(Ende);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CounterContext extends ParserRuleContext {
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public CounterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_counter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammatikListener ) ((GrammatikListener)listener).enterCounter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammatikListener ) ((GrammatikListener)listener).exitCounter(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammatikVisitor ) return ((GrammatikVisitor<? extends T>)visitor).visitCounter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CounterContext counter() throws RecognitionException {
		CounterContext _localctx = new CounterContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_counter);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			exp(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NichtsContext extends ParserRuleContext {
		public NichtsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nichts; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammatikListener ) ((GrammatikListener)listener).enterNichts(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammatikListener ) ((GrammatikListener)listener).exitNichts(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammatikVisitor ) return ((GrammatikVisitor<? extends T>)visitor).visitNichts(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NichtsContext nichts() throws RecognitionException {
		NichtsContext _localctx = new NichtsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_nichts);
		try {
			enterOuterAlt(_localctx, 1);
			{
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhilesContext extends ParserRuleContext {
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public MacroNameAnrufContext macroNameAnruf() {
			return getRuleContext(MacroNameAnrufContext.class,0);
		}
		public IfWhileContext ifWhile() {
			return getRuleContext(IfWhileContext.class,0);
		}
		public WhileProgramContext whileProgram() {
			return getRuleContext(WhileProgramContext.class,0);
		}
		public List<WhilesContext> whiles() {
			return getRuleContexts(WhilesContext.class);
		}
		public WhilesContext whiles(int i) {
			return getRuleContext(WhilesContext.class,i);
		}
		public TerminalNode CommaPunkt() { return getToken(GrammatikParser.CommaPunkt, 0); }
		public WhilesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whiles; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammatikListener ) ((GrammatikListener)listener).enterWhiles(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammatikListener ) ((GrammatikListener)listener).exitWhiles(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammatikVisitor ) return ((GrammatikVisitor<? extends T>)visitor).visitWhiles(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WhilesContext whiles() throws RecognitionException {
		return whiles(0);
	}

	private WhilesContext whiles(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		WhilesContext _localctx = new WhilesContext(_ctx, _parentState);
		WhilesContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_whiles, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Variable:
				{
				setState(121);
				assign();
				}
				break;
			case MacroName:
				{
				setState(122);
				macroNameAnruf();
				}
				break;
			case If:
				{
				setState(123);
				ifWhile();
				}
				break;
			case WhileStart:
				{
				setState(124);
				whileProgram();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(132);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new WhilesContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_whiles);
					setState(127);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(128);
					match(CommaPunkt);
					setState(129);
					whiles(3);
					}
					} 
				}
				setState(134);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class WhileProgramContext extends ParserRuleContext {
		public TerminalNode WhileStart() { return getToken(GrammatikParser.WhileStart, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode DO() { return getToken(GrammatikParser.DO, 0); }
		public TerminalNode Ende() { return getToken(GrammatikParser.Ende, 0); }
		public WhilesContext whiles() {
			return getRuleContext(WhilesContext.class,0);
		}
		public NichtsContext nichts() {
			return getRuleContext(NichtsContext.class,0);
		}
		public WhileProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileProgram; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammatikListener ) ((GrammatikListener)listener).enterWhileProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammatikListener ) ((GrammatikListener)listener).exitWhileProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammatikVisitor ) return ((GrammatikVisitor<? extends T>)visitor).visitWhileProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WhileProgramContext whileProgram() throws RecognitionException {
		WhileProgramContext _localctx = new WhileProgramContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_whileProgram);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(WhileStart);
			setState(136);
			condition();
			setState(137);
			match(DO);
			setState(140);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case WhileStart:
			case If:
			case MacroName:
			case Variable:
				{
				setState(138);
				whiles(0);
				}
				break;
			case Ende:
				{
				setState(139);
				nichts();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(142);
			match(Ende);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfWhileContext extends ParserRuleContext {
		public TerminalNode If() { return getToken(GrammatikParser.If, 0); }
		public ExpIfContext expIf() {
			return getRuleContext(ExpIfContext.class,0);
		}
		public TerminalNode Then() { return getToken(GrammatikParser.Then, 0); }
		public TerminalNode Ende() { return getToken(GrammatikParser.Ende, 0); }
		public WhilesContext whiles() {
			return getRuleContext(WhilesContext.class,0);
		}
		public NichtsContext nichts() {
			return getRuleContext(NichtsContext.class,0);
		}
		public IfWhileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifWhile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammatikListener ) ((GrammatikListener)listener).enterIfWhile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammatikListener ) ((GrammatikListener)listener).exitIfWhile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammatikVisitor ) return ((GrammatikVisitor<? extends T>)visitor).visitIfWhile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfWhileContext ifWhile() throws RecognitionException {
		IfWhileContext _localctx = new IfWhileContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_ifWhile);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(If);
			setState(145);
			expIf();
			setState(146);
			match(Then);
			setState(149);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case WhileStart:
			case If:
			case MacroName:
			case Variable:
				{
				setState(147);
				whiles(0);
				}
				break;
			case Ende:
				{
				setState(148);
				nichts();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(151);
			match(Ende);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionContext extends ParserRuleContext {
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TerminalNode NichtGleich() { return getToken(GrammatikParser.NichtGleich, 0); }
		public TerminalNode Zero() { return getToken(GrammatikParser.Zero, 0); }
		public TerminalNode KlammerAuf() { return getToken(GrammatikParser.KlammerAuf, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode KlammerZu() { return getToken(GrammatikParser.KlammerZu, 0); }
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammatikListener ) ((GrammatikListener)listener).enterCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammatikListener ) ((GrammatikListener)listener).exitCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammatikVisitor ) return ((GrammatikVisitor<? extends T>)visitor).visitCondition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_condition);
		try {
			setState(161);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(153);
				exp(0);
				setState(154);
				match(NichtGleich);
				setState(155);
				match(Zero);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(157);
				match(KlammerAuf);
				setState(158);
				condition();
				setState(159);
				match(KlammerZu);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
